--- a/pages/index.css
+++ b/pages/index.css
@@ -16,3 +16,11 @@
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
 @import url(../blocks/profile/__description/profile__description.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
+
+/* elements */
+@import url(../blocks/elements/elements.css);
+@import url(../blocks/elements/__element/elements__element.css);
+@import url(../blocks/elements/__photo/elements__photo.css);
+@import url(../blocks/elements/__info/elements__info.css);
+@import url(../blocks/elements/__title/elements__title.css);
+@import url(../blocks/elements/__like-button/elements__like-button.css);
