--- a/pages/index.css
+++ b/pages/index.css
@@ -24,3 +24,7 @@
 @import url(../blocks/elements/__info/elements__info.css);
 @import url(../blocks/elements/__title/elements__title.css);
 @import url(../blocks/elements/__like-button/elements__like-button.css);
+
+/* footer */
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
