--- a/blocks/elements/__like-button/elements__like-button.css
+++ b/blocks/elements/__like-button/elements__like-button.css
@@ -6,4 +6,9 @@
   border: none;
   width: 22px;
   height: 19px;
+  transition: opacity 1s linear;
+}
+
+.elements__like-button:hover {
+  opacity: 0.5;
 }
