--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -8,6 +8,11 @@
   width: 150px;
   height: 50px;
   margin: 0 0 0 auto;
+  transition: opacity 1s linear;
+}
+
+.profile__add-button:hover {
+  opacity: 0.6;
 }
 
 @media screen and (max-width: 1100px) {
