сделала адаптивный popup

--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -6,7 +6,9 @@
   border: 1px solid #FFFFFF;
   width: 24px;
   height: 24px;
+  padding: 0;
   align-self: center;
+  cursor: pointer;
   transition: opacity 1s linear;
 }
 
