исправила замечания тестов ЯП

--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -2,5 +2,5 @@
   background-color: #000000;
   color: #FFFFFF;
   font-family: "Inter", sans-serif;
-  text-rendering: optimizeLegibility;;
+  text-rendering: optimizeLegibility;
 }
