--- a/blocks/popup/__form-description/popup__form-description.css
+++ b/blocks/popup/__form-description/popup__form-description.css
@@ -7,10 +7,16 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
+
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  margin-bottom: 48px;
+  padding-bottom: 13px;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 1000px) {
   .popup__form-description {
     width: 238px;
+    margin-bottom: 45px;
   }
 }
