--- a/blocks/popup/__form-item/popup__form-item.css
+++ b/blocks/popup/__form-item/popup__form-item.css
@@ -1,20 +1,13 @@
 .popup__form-item {
   width: 358px;
-  height: 27px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  margin-bottom: 30px;
-}
-
-.popup__form-item:last-of-type {
-  margin-bottom: 48px;
+  min-height: 27px;
+  margin: 0;
+  padding: 0;
+  border: none;
 }
 
 @media screen and (max-width: 1000px) {
   .popup__form-item {
     width: 238px;
-  }
-
-  .popup__form-item:last-of-type {
-    margin-bottom: 45px;
   }
 }
