--- a/blocks/popup/__form-name/popup__form-name.css
+++ b/blocks/popup/__form-name/popup__form-name.css
@@ -7,6 +7,11 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
+
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  margin-bottom: 30px;
+  padding-bottom: 13px;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 1000px) {
