исправила большую часть ошибок ревьюера - в index.html

--- a/blocks/elements/__photo/elements__photo.css
+++ b/blocks/elements/__photo/elements__photo.css
@@ -2,5 +2,6 @@
   border-radius: 10px 10px 0px 0px;
   width: 282px;
   height: 282px;
-  overflow: hidden;
+  object-position: center;
+  object-fit: cover;
 }
