--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -5,5 +5,7 @@
 @media screen and (max-width: 1000px) {
   .header__logo {
     margin: 0 0 31.6px 27px;
+    max-width: 103.74px;
+    min-height: 24.4px;
   }
 }
