--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -3,6 +3,7 @@
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
+  height: 23px;
 }
 
 @media screen and (max-width: 1000px) {
@@ -10,5 +11,6 @@
     margin: 0 0 75px 0;
     font-size: 18px;
     line-height: 22px;
+    height: 22px;
   }
 }
