--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,7 +1,11 @@
 .profile__avatar {
   border-radius: 50%;
-  max-width: 120px;
+  width: 120px;
+  height: 120px;
+  object-position: center;
+  object-fit: cover;
   margin-right: 30px;
+
 }
 
 @media screen  and (max-width: 1000px) {
