--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -3,6 +3,10 @@
   font-weight: 500;
   font-size: 42px;
   line-height: 48px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 294px;
 }
 
 @media screen and (max-width: 1000px) {
@@ -10,5 +14,6 @@
     font-size: 27px;
     line-height: 33px;
     text-align: center;
+    margin-left: 30px;
   }
 }
