--- a/pages/index.css
+++ b/pages/index.css
@@ -1,12 +1,11 @@
 @import url(../vendor/normalize.css);
-@import url(../fonts/fonts.css);
+@import url(../vendor/fonts/fonts.css);
 @import url(../blocks/root/root.css);
 @import url(../blocks/page/page.css);
 
 /* header */
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
-@import url(../blocks/header/__line/header__line.css);
 
 /* profile */
 @import url(../blocks/profile/profile.css);
@@ -34,8 +33,9 @@
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__form-item/popup__form-item.css);
-@import url(../blocks/popup/__form-name/popup__form-name.css);
-@import url(../blocks/popup/__form-description/popup__form-description.css);
+@import url(../blocks/popup/__input-text/popup__input-text.css);
+@import url(../blocks/popup/__input-text/_type/popup__input-text_type_name.css);
+@import url(../blocks/popup/__input-text/_type/popup__input-text_type_description.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
 
 /* footer */
