--- a/blocks/elements/__info/elements__info.css
+++ b/blocks/elements/__info/elements__info.css
@@ -1,6 +1,6 @@
 .elements__info {
-  width: 282px;
-  height: 79px;
+  max-width: 282px;
+  min-height: 79px;
   box-sizing: border-box;
   padding: 25px 15px 31px 21px;
   background: #FFFFFF;
