--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -16,7 +16,7 @@
 @media screen and (max-width: 1000px) {
   .elements {
     max-width: calc(100% - 38px);
-    margin: 36px auto 0;
+    margin-top: 36px;
     grid-template-columns: 1fr;
   }
 }
