--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -6,6 +6,7 @@
 @media screen and (max-width: 1000px) {
   .footer {
     max-width: calc(100% - 38px);
-    margin: 48px auto 36px;
+    margin-top: 48px;
+    margin-bottom: 36px;
   }
 }
