--- a/blocks/popup/__form-item/popup__form-item.css
+++ b/blocks/popup/__form-item/popup__form-item.css
@@ -1,5 +1,5 @@
 .popup__form-item {
-  width: 358px;
+  max-width: 358px;
   min-height: 27px;
   margin: 0;
   padding: 0;
@@ -8,6 +8,6 @@
 
 @media screen and (max-width: 1000px) {
   .popup__form-item {
-    width: 238px;
+    max-width: 238px;
   }
 }
