--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -1,6 +1,6 @@
 .popup__save-button {
-  width: 358px;
-  height: 50px;
+  max-width: 358px;
+  min-height: 50px;
   margin: 0;
   padding: 0;
   border: none;
@@ -20,8 +20,8 @@
 
 @media screen and (max-width: 1000px) {
   .popup__save-button {
-    width: 238px;
-    height: 46px;
+    max-width: 238px;
+    min-height: 46px;
     font-size: 14px;
     line-height: 17px;
   }
