--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -8,7 +8,7 @@
 
 @media screen and (max-width: 1000px) {
   .popup__title {
-    margin: 0 0 75px 0;
+    margin-bottom: 75px;
     font-size: 18px;
     line-height: 22px;
     height: 22px;
