--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -8,7 +8,7 @@
 @media screen and (max-width: 1000px) {
   .profile {
     max-width: calc(100% - 38px);
-    margin: 42px auto 0;
+    margin-top: 42px;
     flex-direction: column;
   }
 }
