--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,4 +1,5 @@
 .profile__edit-button {
+  margin: 10px 0 0;
   background-image: url(../../../images/profile__edit-button.svg);
   background-position: center;
   background-repeat: no-repeat;
@@ -18,6 +19,7 @@
 
 @media screen and (max-width: 1000px) {
   .profile__edit-button {
+    margin-top: 0;
     background-size: 7.5px 7.5px;
     width: 18px;
     height: 18px;
