--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,5 +1,5 @@
 .profile__name {
-  margin: 0;
+  margin: 5px 0 0;
   font-weight: 500;
   font-size: 42px;
   line-height: 48px;
@@ -14,6 +14,7 @@
     font-size: 27px;
     line-height: 33px;
     text-align: center;
+    margin-top: 0;
     margin-left: 30px;
   }
 }
