--- a/pages/index.css
+++ b/pages/index.css
@@ -20,6 +20,7 @@
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/elements/__element/elements__element.css);
 @import url(../blocks/elements/__photo/elements__photo.css);
+@import url(../blocks/elements/__delete-button/elements__delete-button.css);
 @import url(../blocks/elements/__info/elements__info.css);
 @import url(../blocks/elements/__title/elements__title.css);
 @import url(../blocks/elements/__like-button/elements__like-button.css);
