--- a/pages/index.css
+++ b/pages/index.css
@@ -37,6 +37,8 @@
 @import url(../blocks/popup/__input-text/popup__input-text.css);
 @import url(../blocks/popup/__input-text/_type/popup__input-text_type_name.css);
 @import url(../blocks/popup/__input-text/_type/popup__input-text_type_description.css);
+@import url(../blocks/popup/__input-text/_type/popup__input-text_type_place.css);
+@import url(../blocks/popup/__input-text/_type/popup__input-text_type_link.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
 
 /* footer */
