--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -5,7 +5,7 @@
   width: 32px;
   height: 32px;
   background-image: url(../../../images/popup__close.svg);
-  background-color: #000;
+  background-color: rgba(0, 0, 0, 0);
   background-position: center;
   background-repeat: no-repeat;
   border: none;
