--- a/blocks/popup/__input-text/popup__input-text.css
+++ b/blocks/popup/__input-text/popup__input-text.css
@@ -13,6 +13,10 @@
   box-sizing: border-box;
 }
 
+.popup__input-text:invalid {
+  border-bottom: 1px solid #FF0000;
+}
+
 @media screen and (max-width: 1000px) {
   .popup__input-text {
     min-width: 238px;
