feat: настроена валидация форм

--- a/blocks/popup/__input-text/popup__input-text.css
+++ b/blocks/popup/__input-text/popup__input-text.css
@@ -1,24 +1,10 @@
 .popup__input-text {
-  padding: 0;
-  border: none;
-  outline: none;
-  min-width: 358px;
+  width: 100%;
   min-height: 14px;
-  font-weight: 400;
+  border: 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   font-size: 14px;
   line-height: 17px;
-
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  padding-bottom: 9px;
+  padding: 0 0 9px;
   box-sizing: border-box;
-}
-
-.popup__input-text:invalid {
-  border-bottom: 1px solid #FF0000;
-}
-
-@media screen and (max-width: 1000px) {
-  .popup__input-text {
-    min-width: 238px;
-  }
 }
