--- a/blocks/popup/__input-text/_type/popup__input-text_type_link.css
+++ b/blocks/popup/__input-text/_type/popup__input-text_type_link.css
@@ -1,9 +1,3 @@
 .popup__input-text_type_link {
-  margin-bottom: 48px;
-}
-
-@media screen and (max-width: 1000px) {
-  .popup__input-text_type_link {
-    margin-bottom: 45px;
-  }
+  margin-top: 13px;
 }
