--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -5,14 +5,16 @@
   margin: 0;
   padding: 0;
   border: none;
-  background: #000000;
   border-radius: 2px;
   color: #FFF;
+  background: #000000;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
   text-align: center;
   transition: opacity 1s linear;
+
+  margin-top: 30px;
 }
 
 .popup__save-button:hover {
@@ -25,5 +27,7 @@
     min-height: 46px;
     font-size: 14px;
     line-height: 17px;
+
+    margin-top: 25px;
   }
 }
