--- a/pages/index.css
+++ b/pages/index.css
@@ -39,11 +39,14 @@
 @import url(../blocks/popup/__title/_type/popup__title_type_img.css);
 @import url(../blocks/popup/__form-item/popup__form-item.css);
 @import url(../blocks/popup/__input-text/popup__input-text.css);
+@import url(../blocks/popup/__input-text/_error/popup__input-text_error.css);
 @import url(../blocks/popup/__input-text/_type/popup__input-text_type_name.css);
 @import url(../blocks/popup/__input-text/_type/popup__input-text_type_description.css);
 @import url(../blocks/popup/__input-text/_type/popup__input-text_type_place.css);
 @import url(../blocks/popup/__input-text/_type/popup__input-text_type_link.css);
+@import url(../blocks/popup/__input-error/popup__input-error.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
+@import url(../blocks/popup/__save-button/_disabled/popup__save-button_disabled.css);
 
 /* footer */
 @import url(../blocks/footer/footer.css);
