--- a/pages/index.css
+++ b/pages/index.css
@@ -2,6 +2,7 @@
 @import url(../vendor/fonts/fonts.css);
 @import url(../blocks/root/root.css);
 @import url(../blocks/page/page.css);
+@import url(../blocks/main/main.css);
 
 /* header */
 @import url(../blocks/header/header.css);
